2007-05-25  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/gazpacholoader.py:
	Add gazpacho support for ObjectTree, fixes #3389

=== 1.9.15 ===
2007-05-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (Library.__init__): Save the
	prefix

2007-05-21  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py:
	Release 1.9.15

2007-05-21  Johan Dahlin  <jdahlin@async.com.br>

	* MANIFEST.in: 
	* doc/Makefile: 
	* tools/epyrun: 
	Use pydoctor instead of epydoc.

	* kiwi/python.py (AttributeForwarder): Add a new class,
	which can be used to forward attributes to another
	object.

2007-05-17  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (_BaseDateTimeConverter.from_string): 
	Disallow dates before 1900, since the strftime implementation
	on Linux does not allow it.
	Fixes #3363

2007-05-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/search.py (SearchSlaveDelegate.set_summary_label): 
	Add support for setting a summary label

2007-05-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/search.py (SearchFilter): Inherit from a widget and add a 
	filter-position child property. Add normal properties to the filter
	and the container. Add a common base class and remove a couple of
	methods from the interface

	* tests/test_ObjectList.py (ConstructorTest.testGObjectNew): 
	Add a test

	* kiwi/ui/objectlist.py (ObjectList.__init__): Make sure
	gobject.new works

	Fixes #3343

2007-05-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (Column): Turn attributes into a GObject 
	property.

	* kiwi/ui/search.py (ComboSearchFilter.__init__): Make values optional
	(SearchContainer.add_filter): Only add the executer columns if
	we have an executer set, don't require one.

2007-05-11  Johan Dahlin  <jdahlin@async.com.br>
